# skyhook

./: .gitignore  pyproject.toml  setup.cfg
docs/: code-generation.rst  conf.py  distribution.rst  example-sdk-documentation.rst  getting-started.rst  implementing.rst  index.rst  specification.rst  using.rst
examples/calculator/: calculator.yaml
examples/noughts-and-crosses/: game.py  noughts-and-crosses.yaml  players.py  pyproject.toml
skyhook/: __init__.py  error.py  function.py  generate.py  hook.py  message.py  publish.py  service.py
tests/: test_function.py  test_generate.py  test_init.py  test_message.py
