[metdata]
name = skyhook
version = 0.0.0
description = For building simple services on top of AWS.
author = Oliver Ainsworth
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = skyhook
install_requires =
    arnparse
    astunparse
    black
    boto3
    jsonschema
    pyyaml
python_requires = >=3.8

[options.entry_points]
console_scripts =
    skyhook-generate = skyhook.generate:_main

[options.extras_require]
pretty=
    black
docs =
    furo
    sphinx
tests =
    pytest
    pytest-cov
